fixed ioexception